The changelog style is adapted from Apache Lucene.

Note that ``RB_ID=#`` correspond to associated messages in commits.

Next Version

New Features:

  * util-core: Added `c.t.util.SlowProbeProxyTimer` for monitoring the duration
    of execution for timer tasks. ``PHAB_ID=D70279``

  * util-core: Introduced RootMonitor#set to set custom Monitor to RootMonitor.
    ``PHAB_ID=D70876``

Runtime Behavior Changes:

  * util-core: `c.t.util.Closable.sequence` now continues processing
    the `Closables` should any of their closes result in a failed `Future`
    and will return the first failure. Synchronous exceptions are now
    handled by lifting them into failed `Futures`. ``PHAB_ID=D62418``

  * util-events: `com.twitter.util.events.sinkEnabled` now defaults to false
    in preparation for removal in an upcoming release. ``PHAB_ID=D64437``

API Changes:

  * util-core: ByteWriter has been transformed into a true trait which can now
    be implemented outside of the com.twitter.io package. ``PHAB_ID=D59996``

  * util-core: The method ByteWriter.owned() has been moved to a sub trait,
    BufByteWriter, to separate the notion of the target buffer representation from the
    writer methods in order to make it easier to target different buffer representations.
    ``PHAB_ID=D61215``

  * util-stats: ``PHAB_ID=D59762``

   - `ProxyStatsReceiver.self` is now protected (was public before).
   - `StatsReceiver.repr` is now `def` (was `val` before).

  * util-stats: Counter#add now takes a `Long` instead of an `Integer` as an argument.
    ``PHAB_ID=D69064``

Deprecations:

  * util-events: This module is deprecated and will be removed in an upcoming
    release. ``PHAB_ID=D64437``

  * util-stats: ``PHAB_ID=D62611``

    - `StatsReceiver.counter0` is deprecated in favour of vararg `StatsReceiver.counter`
    - `StatsReceiver.stat0` is deprecated in favour of vararg `StatsReceiver.stat`


6.45.0  2017-06-06

New Features:
