@@ -9,9 +9,10 @@ trait StatsReceiverProxy extends StatsReceiver with DelegatingStatsReceiver {
 
   def repr: AnyRef = self.repr
 
-  def counter(names: String*): Counter = self.counter(names:_*)
-  def stat(names: String*): Stat = self.stat(names:_*)
-  def addGauge(names: String*)(f: => Float): Gauge = self.addGauge(names:_*)(f)
+  def counter(verbosity: Verbosity, names: String*): Counter = self.counter(verbosity, names:_*)
+  def stat(verbosity: Verbosity, names: String*): Stat = self.stat(verbosity, names:_*)
+  def addGauge(verbosity: Verbosity, names: String*)(f: => Float): Gauge =
+    self.addGauge(verbosity, names: _*)(f)
 
   def underlying: Seq[StatsReceiver] = Seq(self)
 
